--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -7,6 +7,7 @@
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
+                    {% if current_user.is_authenticated and current_user.has_role('admin') %}
                     <li class="nav-item">
                         <a class="nav-link {% if request.endpoint == 'admin.users' %}active{% endif %}" 
                            href="{{ url_for('admin.users') }}">
