--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,6 +10,7 @@
         {% block styles %}
             <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
             <link href="{{ url_for('static', filename='css/webhooks.css') }}" rel="stylesheet">
+            <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
         {% endblock %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
     </head>
@@ -87,6 +88,7 @@
                 }
             </script>
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
             <script src="{{ url_for('static', filename='js/common.js') }}"></script>
         {% endblock %}
