--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -24,14 +24,14 @@
                         <a href="{{ url_for('automation.new_automation') }}" class="btn btn-secondary">Create New Automation</a>
                     </div>
                     <div class="card-body p-0">
-                        <table class="table mb-0">
+                        <table class="table automation-table mb-0">
                             <thead>
                                 <tr>
-                                    <th>Automation Name</th>
-                                    <th>Connected Portfolio</th>
-                                    <th>Trading Pair</th>
-                                    <th>Value</th>
-                                    <th class="text-end">Actions</th>
+                                    <th class="automation-name">Automation Name</th>
+                                    <th class="portfolio">Connected Portfolio</th>
+                                    <th class="trading-pair">Trading Pair</th>
+                                    <th class="value">Value</th>
+                                    <th class="actions text-end">Actions</th>
                                 </tr>
                             </thead>
                             <tbody>
