--- a/app/static/css/webhooks.css
+++ b/app/static/css/webhooks.css
@@ -1,34 +1,34 @@
-.table th[class*='cursor-pointer']:nth-child(1),
-.table td:nth-child(1) {
+.webhook-logs-table th[class*='cursor-pointer']:nth-child(1),
+.webhook-logs-table td:nth-child(1) {
     width: 20%;
     white-space: nowrap;
 }
 
-.table th[class*='cursor-pointer']:nth-child(2),
-.table td:nth-child(2) {
+.webhook-logs-table th[class*='cursor-pointer']:nth-child(2),
+.webhook-logs-table td:nth-child(2) {
     width: 20%;
     white-space: normal;
     word-wrap: break-word;
 }
 
-.table th[class*='cursor-pointer']:nth-child(3),
-.table td:nth-child(3) {
+.webhook-logs-table th[class*='cursor-pointer']:nth-child(3),
+.webhook-logs-table td:nth-child(3) {
     width: 15%;
     white-space: nowrap;
 }
 
-.table th[class*='cursor-pointer']:nth-child(4),
-.table td:nth-child(4) {
+.webhook-logs-table th[class*='cursor-pointer']:nth-child(4),
+.webhook-logs-table td:nth-child(4) {
     width: 15%;
     white-space: nowrap;
 }
 
-.table td:nth-child(5) {
+.webhook-logs-table td:nth-child(5) {
     width: 30%;
     padding: 8px;
 }
 
-.table td:nth-child(5) div {
+.webhook-logs-table td:nth-child(5) div {
     max-width: 100%;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -76,7 +76,7 @@
     border-radius: 4px;
 }
 
-.table td pre {
+.webhook-logs-table td pre {
     font-family: var(--bs-font-monospace);
     font-size: 0.875rem;
 }
