had db connection issues and troubleshooted them in this branch

--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -26,6 +26,7 @@
                             <i class="fas fa-cog"></i> Settings
                         </a>
                     </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
