--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -81,24 +81,38 @@
             {% block content %}{% endblock %}
         </div>
 
-        <!-- React dependencies -->
         {% block scripts %}
+            <!-- Core libraries first -->
+            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+            <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        
+            <!-- React and dependencies -->
             <script src="https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/7.23.5/babel.min.js"></script>
+        
+            <!-- Import map with all your components -->
             <script type="importmap">
                 {
                     "imports": {
                         "lucide-react": "https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/lucide.min.js",
                         "react": "https://cdnjs.cloudflare.com/ajax/libs/react/18.2.0/umd/react.production.min.js",
                         "react-dom": "https://cdnjs.cloudflare.com/ajax/libs/react-dom/18.2.0/umd/react-dom.production.min.js",
-                        "@/components/ui/card": "/static/vendor/shadcn-ui/card.js"
+                        "@/components/ui/card": "/static/vendor/shadcn-ui/card.js",
+                        "@/components/ui/button": "/static/vendor/shadcn-ui/button.js",
+                        "@/components/ui/form": "/static/vendor/shadcn-ui/form.js",
+                        "@/components/ui/input": "/static/vendor/shadcn-ui/input.js",
+                        "@/components/ui/label": "/static/vendor/shadcn-ui/label.js",
+                        "@/components/ui/select": "/static/vendor/shadcn-ui/select.js",
+                        "@/components/ui/switch": "/static/vendor/shadcn-ui/switch.js",
+                        "@/components/ui/toast": "/static/vendor/shadcn-ui/toast.js",
+                        "@/lib/utils": "/static/js/utils.js"
                     }
                 }
             </script>
-            <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-            <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        
+            <!-- Your application code last -->
             <script src="{{ url_for('static', filename='js/common.js') }}"></script>
         {% endblock %}
     </body>
