webhook base url is configurable in .env

--- a/app/templates/automation.html
+++ b/app/templates/automation.html
@@ -268,7 +268,7 @@
                         <div class="input-group mb-4">
                             <input type="text" 
                                 class="form-control font-monospace" 
-                                value="{{ request.url_root }}webhook?automation_id={{ automation.automation_id }}" 
+                                value="{{ webhook_url }}" 
                                 readonly>
                             <button class="btn btn-outline-secondary copy-url" type="button">Copy</button>
                         </div>
